# SGTR-RL

./: .gitignore  .gitmodules  PROJECT_SETUP.md  README.md  SETUP_COMPLETE.md  pyproject.toml
config/: data_paths.yaml
data/: README.md  cached_generations
sgtr_rl/config/: __init__.py  paths.py
sgtr_rl/data_processing/: __init__.py  eval_loader.py  triple_generator.py
sgtr_rl/scripts/: __init__.py  test_data_loading.py  verify_data.py
